# Home-Assistant-Electric-Ireland

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LEGAL.md  README.md  SECURITY.md  hacs.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: validate.yml
.sisyphus/drafts/: api-reference.md
brands/: README.md
custom_components/electric_ireland_insights/: AGENTS.md  __init__.py  api.py  config_flow.py  const.py  coordinator.py  diagnostics.py  exceptions.py  icons.json  manifest.json  quality_scale.yaml  sensor.py  sensor_base.py  strings.json  types.py
docs/: electric-ireland-api.openapi.yaml  electric-ireland-auth-reference.md  index.md  oauth-api-investigation.md
scripts/: capture_fixtures.py
tests/: AGENTS.md  assertions.py  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_sensor.py
tests/fixtures/: README.md  bill_period_response.json  sample_hourly_response.json  schemas.py
tests/fixtures/real/: bill-period.json  bill_periods_gap.json  bill_periods_normal.json  dashboard.html  hourly-usage.2026-04-03.json  hourly-usage.2026-04-04.json  hourly_empty_day.json  hourly_partial_day.json  insights.html  login-dashboard.html
tests/integration/: conftest.py  test_api.py  test_bug_discovery.py  test_edge_cases.py  test_flows.py  test_lifecycle.py  test_tariffs.py
