[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "home-assistant-electric-ireland"
version = "0.0.0"
description = "Home Assistant integration for Electric Ireland Insights"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-homeassistant-custom-component",
  "pytest-asyncio",
  "pytest-cov",
  "aioresponses",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
